set producers = 5, consumers = 5